--- a/P4DSND.ipynb
+++ b/P4DSND.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "understand the buisness: \n",
+    "# Business Understanding\n",
+    " \n",
     "Black friday is one of the creative sales idea in the history. Everyone would be waiting that day to get discounted products. Ecommerce is the most benefited sector by far. Data will show us how its important to check sells and market movment in that day. I have used Kaggle Data to see.  Some of this questions will draw better picture, the questions as follow: \n",
     "1-Customers more likely to spend during black firday?top 20. \n",
     "2-costumers ages are more likly attracted in that day and which gender? \n",
     "3-items has more sales? top 20.\n",
     "4-cities are more active than others? \n",
     "\n",
-    "By answering these questions would help the selleres to decide acording to the results.\n"
+    "By answering these questions would help the selleres to decide acording to the results.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Understanding\n",
+    "\n",
+    " Black Friday Dataset used From Kaggle, which is a sample of the transactions made in a retail store.\n",
+    "Below are the steps to look at and understand the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +187,7 @@
        "4                 NaN                 NaN      7969  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +340,7 @@
        "max             18.000000           18.000000   23961.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +418,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,6 +433,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data preparation.\n",
+    "\n",
     "prepare the data by doing: \n",
     "*checking all columns that have missing values\n",
     "*One-Hot Encoding for Categorical variables such as Club, Nationality, Preferred Positions"
@@ -427,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +463,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,12 +477,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "it looks like there are missing value in category 1&2 which means no purchasing in this items. Lets zero it then. "
+    "After check, missing values only exist in column \"Product_Category_2\" & \"Product_Category_3\". From the describe of the dataset, the min values of \"Product_Category_2\" & \"Product_Category_3\" are non-zero. My understanding is that the missing value in \"Product_Category_2\" & \"Product_Category_3\" means the customer didn't purchase products in these two category. Thus we can use \"0\" to fill in the missing value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1634,7 @@
        "[537577 rows x 12 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,9 +1853,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# result evaluation.\n",
+    "\n",
     "lets start to answers our questions. "
    ]
   },
